[tool.poetry]
name = "qcc-gateway-hl7-listener"
version = "1.0.0"
description = "HL7 listener service for QCC gateway appliance"
authors = ["sajal-g <sajalgoyal@gmail.com>"]

packages = [
    { include = "hl7_listener", from = "src/main/py"},    
]

[[tool.poetry.source]]
name = "development-pypi"
url = "https://coverahealth.jfrog.io/artifactory/api/pypi/development-pypi/simple"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.3"
asyncio-nats-client = "^0.11.5"
hl7 = "^0.4.5"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
docformatter = "^1.5.1"
isort = "^5.12.0"
pytest = "7.1.2"
pytest-mock = "3.8.2"
pytest-asyncio = "0.19.0"

[tool.pytest.ini_options]
testpaths = [
    "src/test",
]

[tool.autopep8]
ignore = "E401,E402,E711,E712"
max_line_length = 88

[tool.docformatter]
recursive = true
wrap-descriptions = 88
wrap-summaries = 88

[tool.isort]
combine_as_imports = true
combine_star = true
multi_line_output = 3
force_grid_wrap = 2
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
